class was added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="addition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit odio deleniti error voluptate maxime id. Recusandae, totam quae neque, obcaecati harum quos architecto quis explicabo optio vel est eius cumque!</p>
         </div>
 
-        <div class="    ">
+        <div class="imageBlock">
             <img src="./img/picture 1.png" alt="#">
         </div>
     </div>
